--- a/atarashii-gakko/src/styles/components/_logo.scss
+++ b/atarashii-gakko/src/styles/components/_logo.scss
@@ -8,7 +8,7 @@
 
   // MOBILE
   @media (max-width: 768px) {
-    bottom: 74%;
+    bottom: 73%;
     left: 50%;
     transform: translateX(-50%);
     width: 90%;
